Fixed story and chapter forms, replaced akismet with simpler spam check, squashed some bugs, updated npm packages

--- a/theplotpot-frontend/src/components/DarkModeToggle.css
+++ b/theplotpot-frontend/src/components/DarkModeToggle.css
@@ -11,8 +11,7 @@
   position: fixed;
   bottom: 80px;
   right: 10px;
-  background-color: transparent;
-
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 .bulb-icon {
